[package]
name = "flp"
version = "0.1.1"
authors = ["Q0tzly"]
edition = "2021"

description = "Get fullpath of file or working directory"
repository = "https://github.com/Q0tzly/flp"
license = "Apache-2.0"
readme = "README.md"

keywords = ["command", "fullpath"]
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "flp"
path = "src/main.rs"

[dependencies]
